# docs/swagger.json
@@ -276,7 +276,7 @@
         "description": "",
         "parameters": [
           {
-            "name": "cookie",
+            "name": "x-api-key",
             "in": "header",
             "type": "string"
           },
@@ -335,7 +335,7 @@
             "type": "string"
           },
           {
-            "name": "cookie",
+            "name": "x-api-key",
             "in": "header",
             "type": "string"
           },
@@ -397,7 +397,7 @@
             "type": "string"
           },
           {
-            "name": "cookie",
+            "name": "x-api-key",
             "in": "header",
             "type": "string"
           }
@@ -962,7 +962,7 @@
         }
       }
     },
-    "/user/editSelfUser": {
+    "/user/editProfile": {
       "post": {
         "tags": [
           "Users/"
@@ -1007,20 +1007,12 @@
         }
       }
     },
-    "/user/getLog/{id}": {
+    "/user/getLogs": {
       "get": {
         "tags": [
           "Users/"
         ],
         "description": "",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          }
-        ],
         "responses": {
           "200": {
             "description": "OK"
@@ -1031,7 +1023,33 @@
         }
       }
     },
-    "/user/addLog/{id}": {
+    "/user/getProfile": {
+      "get": {
+        "tags": [
+          "Users/"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "cookie",
+            "in": "header",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/user/addUserActivity": {
       "post": {
         "tags": [
           "Users/"
@@ -1039,61 +1057,33 @@
         "description": "",
         "parameters": [
           {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "default": {
-            "description": ""
-          }
-        }
-      }
-    },
-    "/user/getUser/{id}": {
-      "get": {
-        "tags": [
-          "Users/"
-        ],
-        "description": "",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "400": {
-            "description": "Bad Request"
-          }
-        }
-      }
-    },
-    "/user/addUserActivity/{id1}/{id2}": {
-      "get": {
-        "tags": [
-          "Users/"
-        ],
-        "description": "",
-        "parameters": [
-          {
-            "name": "id1",
-            "in": "path",
-            "required": true,
+            "name": "cookie",
+            "in": "header",
             "type": "string"
           },
           {
-            "name": "id2",
-            "in": "path",
-            "required": true,
-            "type": "string"
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "activity_id": {
+                  "example": "any"
+                },
+                "workout_date": {
+                  "example": "any"
+                },
+                "workout_time": {
+                  "example": "any"
+                },
+                "workout_duration": {
+                  "example": "any"
+                },
+                "room_id": {
+                  "example": "any"
+                }
+              }
+            }
           }
         ],
         "responses": {
@@ -1102,6 +1092,12 @@
           },
           "400": {
             "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       }
