# routes/user.js
@@ -1,15 +1,15 @@
 import express from "express";
 import Validate from "../middleware/validate.js";
 import { check } from "express-validator";
-import { Edit } from "../controllers/auth.js";
-import { getLog, addLog, getUser, addUserActivity } from "../controllers/user.js"
+import { editProfile } from "../controllers/auth.js";
+import { getLogs, getProfile, addUserActivity } from "../controllers/user.js"
+import { Verify } from "../middleware/verify.js";
 
 const userRouter = express.Router(
 );
 
 // Edit route == POST request
-userRouter.post(
-    "/editSelfUser",
+userRouter.post("/editProfile",
     check("user_mail")
         .isEmail()
         .withMessage("Entrez un mail valide.")
@@ -39,58 +39,52 @@ userRouter.post(
         .trim()
         .escape(),
     Validate,
-    Edit
+    editProfile
     //#swagger.tags = ['Users/']
 )
 
 // Get log route == GET request
-userRouter.get(
-    "/getLog/:id",
-    getLog
+userRouter.get("/getLogs",getLogs
     //#swagger.tags = ['Users/']
 )
 
 // update log route == POST request
-userRouter.post(
-    "/addLog/:id",
-    check("workout_date")
-        .isEmail()
-        .withMessage("Entrez une date valide.")
-        .normalizeEmail(),
-    check("workout_time")
-        .not()
-        .isEmpty()
-        .withMessage("L'horaire de travail requis")
-        .trim()
-        .escape(),
-    check("workout_duration")
-        .not()
-        .isEmpty()
-        .withMessage("Le temps de travail est requis")
-        .trim()
-        .escape(),
-    check("localisation")
-        .not()
-        .isEmpty()
-        .withMessage("La localisation est requise")
-        .trim()
-        .escape(),
-    addLog
-    //#swagger.tags = ['Users/']
-)
+// userRouter.post(
+//     "/addLog/:id",
+//     check("workout_date")
+//         .isEmail()
+//         .withMessage("Entrez une date valide.")
+//         .normalizeEmail(),
+//     check("workout_time")
+//         .not()
+//         .isEmpty()
+//         .withMessage("L'horaire de travail requis")
+//         .trim()
+//         .escape(),
+//     check("workout_duration")
+//         .not()
+//         .isEmpty()
+//         .withMessage("Le temps de travail est requis")
+//         .trim()
+//         .escape(),
+//     check("localisation")
+//         .not()
+//         .isEmpty()
+//         .withMessage("La localisation est requise")
+//         .trim()
+//         .escape(),
+//     addLog
+//     //#swagger.tags = ['Users/']
+// )
 
 
 // Get user infos route == GET request
 
-userRouter.get(
-    "/getUser/:id",
-    getUser
+userRouter.get("/getProfile",Verify,getProfile
     //#swagger.tags = ['Users/']
 )
 
-userRouter.get(
-    "/addUserActivity/:idUser/:idActivity",
-    addUserActivity
+userRouter.post("/addUserActivity",Verify, addUserActivity
     //#swagger.tags = ['Users/']
 )
 
